# esp_intermittent_face_ml

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  app_main.cpp  app_main_prev.cpp  idf_component.yml
